--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,15 @@
+@font-face {
+  font-family: "zen";
+  src: url("/fonts/ZenKakuGothicNew-Regular.ttf");
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   outline: none;
   background-color: #124e78;
+  font-family: "zen";
 }
 
 @font-face {
@@ -13,7 +19,7 @@
 
 .hello {
   font-family: "zen";
-  padding: 1rem;
+  padding-left: 5rem;
   font-size: 3rem;
   color: white;
 }
