--- a/client/src/pages/SignUpPage/SignUpPage.css
+++ b/client/src/pages/SignUpPage/SignUpPage.css
@@ -24,7 +24,7 @@
 
 .form-sign input {
   background-color: white;
-  color: #e88d67;
+  color: black;
   padding: 1rem;
   margin: 0.5rem;
   font-size: 15px;
