--- a/client/src/pages/BoardPage/BoardPage.css
+++ b/client/src/pages/BoardPage/BoardPage.css
@@ -28,6 +28,12 @@
   text-align: left;
   width: 80%;
   height: 20rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.748);
+}
+.card-infos:hover {
+  width: 82%;
+  height: 22rem;
 }
 .card-signalement {
   display: flex;
@@ -40,6 +46,12 @@
   font-family: "zen";
   text-align: left;
   width: 80%;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.748);
+}
+
+.card-signalement:hover {
+  width: 82%;
 }
 
 .incident-title {
@@ -63,10 +75,16 @@
   border: none;
   font-size: 0.8rem;
   font-weight: bold;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.748);
+  width: 5rem;
+  height: 2.5rem;
 }
 
 .modifier-btn:hover {
   background-color: #ffc42b;
+  width: 5.5rem;
+  height: 3rem;
 }
 
 .img-incident {
@@ -81,19 +99,22 @@
 .signalement-btn {
   background-color: white;
   padding: 0.5rem;
-  margin: 0.2rem;
   cursor: pointer;
   border-radius: 5px;
   border: none;
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: bold;
-  font-family: "zen";
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.748);
+  width: 5rem;
+  height: 2.5rem;
   text-decoration: none;
-  color: black;
 }
 
 .signalement-btn:hover {
   background-color: #ffc42b;
+  width: 5.5rem;
+  height: 3rem;
 }
 
 .infos-incident {
@@ -114,15 +135,43 @@
     align-items: start;
     padding: 5rem;
   }
-  .card-infos {
-    width: 100%;
-    flex-direction: row;
-    gap: 1rem;
-  }
 
   .img-avatar {
     width: 12%;
     margin-left: 1.5rem;
+  }
+
+  .card-infos {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 100%;
+    height: 20rem;
+  }
+  .card-infos:hover {
+    width: 101%;
+    height: 22rem;
+  }
+  .card-signalement {
+    text-align: center;
+    border: 5px solid white;
+    color: white;
+    margin-bottom: 1rem;
+    font-family: "zen";
+    text-align: left;
+    width: 80%;
+    border-radius: 0.5rem;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.748);
+
+    width: 100%;
+    flex-direction: row;
+    gap: 3rem;
+    align-items: end;
+    padding: 1rem;
+  }
+
+  .card-signalement:hover {
+    width: 101%;
   }
 
   .infos-user {
@@ -146,14 +195,17 @@
 
   .modifier-btn {
     font-size: 2rem;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.748);
+    width: 10rem;
+    height: 5rem;
   }
 
-  .card-signalement {
-    width: 100%;
-    flex-direction: row;
-    gap: 3rem;
-    align-items: end;
-    padding: 1rem;
+  .modifier-btn:hover {
+    background-color: #ffc42b;
+    width: 11rem;
+    height: 6rem;
   }
 
   .infos-incident {
@@ -177,5 +229,6 @@
 
   .signalement-btn {
     font-size: 2rem;
+    color: black;
   }
 }
