--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -67,6 +67,10 @@
   color: white;
 }
 
+.formes {
+  margin-top: 4rem;
+  width: 50%;
+}
 @media screen and (min-width: 768px) {
   .body-home {
     display: flex;
@@ -77,7 +81,7 @@
   }
 
   .logo-care {
-    width: 50%;
+    width: 40%;
   }
 
   .home-titre {
@@ -110,4 +114,10 @@
   .home-subtitle {
     font-size: 3rem;
   }
+}
+
+.formes {
+  margin-top: 2rem;
+
+  width: 25%;
 }
